@@ -1,3 +1,8 @@
+2006-12-04  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* shimbun/nnshimbun.el (nnshimbun-close-server): Save NOV for only
+	existing groups.
+
 2006-11-25  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* mew-w3m.el (w3m-mail-compose-with-mew): Refrain handling of
